<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TapTypo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_resultat">ResultatActivity</string>
    <string name="bravo">Bravo ! Vous avez fini !</string>
    <string name="replay">Rejouer</string>
    <string name="duree">Durée : </string>
    <string name="nberreurs">Nombre d\'erreurs : </string>
    <string name="longest_streak">Série max. de mots sans erreur : </string>
    <string name="score">Score : </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_solo_button">Lancer la partie solo</string>
    <string name="home_create_button">Créer une partie</string>
    <string name="home_join_button">Rejoindre une partie</string>

    <string name="title_activity_start_menu">StartMenuActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_launcher">Launcher</string>
    <string name="HostGameButtonText">Héberger une partie</string>
    <string name="JoinGameButtonText">Rechercher une partie</string>
    <string name="SendButtonText">Send</string>
    <string name="ReadyButtonText">Ready !</string>
    <string name="title_activity_host">HostActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_waiting_room">WaitingRoom</string>
    <string name="title_activity_rank">RankActivity</string>

</resources>
