<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="boyot.fr.TapTypo.ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/libelle"
        android:text="@string/bravo"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        android:id="@+id/rejouer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/duree"
        android:id="@+id/duree"
        android:layout_below="@+id/libelle"
        android:layout_alignLeft="@+id/libelle"
        android:layout_alignStart="@+id/libelle"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nberreurs"
        android:id="@+id/nberreurs"
        android:layout_below="@+id/duree"
        android:layout_alignLeft="@+id/duree"
        android:layout_alignStart="@+id/duree"
        android:textSize="@dimen/abc_text_size_medium_material" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/longest_streak"
        android:id="@+id/longest_streak"
        android:layout_below="@+id/nberreurs"
        android:layout_alignLeft="@+id/nberreurs"
        android:layout_alignStart="@+id/nberreurs"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/score"
        android:layout_above="@+id/rejouer"
        android:layout_alignLeft="@+id/longest_streak"
        android:layout_alignStart="@+id/longest_streak"
        android:layout_marginBottom="49dp" />
</RelativeLayout>
